--- a/tours.html
+++ b/tours.html
@@ -104,20 +104,28 @@
 
 
     <h1>Highlights from past tours</h1>
-    <img width="200" src="images/gilliamActivity.jpeg" alt="Smiling woman holding fabric sculpture"/>
-    <p>During the Fall 2018 touring season, a few of the tours focused on fabric. During one stop, Laura Seligman presented a large fabric sculpture by Sam Gilliam. Guests created a group poem with phrases that came to mind when looking at the piece. Later, guests came together to create their own version of the sculpture.</p>
+    <div class="pastTours">
+      <div class="pastDate">
+        <img width="200" src="images/gilliamActivity.jpeg" alt="Smiling woman holding fabric sculpture"/>
+        <h2>October 19, 2018</h2>
+        <p>During the Fall 2018 touring season, a few of the tours focused on fabric. During one stop, Laura Seligman presented a large fabric sculpture by Sam Gilliam. Guests created a group poem with phrases that came to mind when looking at the piece. Later, guests came together to create their own version of the sculpture.</p>
+      </div>
 
-    <img width="200" src="images/gilliamgroup.jpeg" alt="Multicolored fabric pieces put together in a sculpture"/>
-    <p>swooping ripples</p>
-    <p>gentle, soft pink</p>
-    <p>    following waves</p>
-    <p>some ugly little things</p>
-    <p>a blanket for a giant</p>
-    <p>a haphazard plan</p>
-    <p>arranged, flung,</p>
-    <p>    jabbed and folded</p>
-    <p>things change regularly</p>
-    <p>-- poem written by a tour group in response to Sam Gilliam's Situation VI--Pisces 4</p>
+      <div class="pastDate">
+        <img width="200" src="images/gilliamgroup.jpeg" alt="Multicolored fabric pieces put together in a sculpture"/>
+        <h2>October 12, 2018</h2>
+        <p>swooping ripples
+        </br>gentle, soft pink
+        </br>    following waves
+        </br>some ugly little things
+        </br>a blanket for a giant
+        </br>a haphazard plan
+        </br>arranged, flung,
+        </br>    jabbed and folded
+        </br>things change regularly
+        </br>-- poem written by a tour group in response to Sam Gilliam's Situation VI--Pisces 4</p>
+      </div>
+    </div>
   </main>
 
   <footer>
