--- a/facilities.html
+++ b/facilities.html
@@ -29,19 +29,33 @@
     <p>Meet Me at UMMA currently works directly with day centers and memory care centers to organize tours.</p>
     <h2>Our tours are currently serving:</h2>
 
-    <img src="images/ehm_Logo.png" alt="Evangelical Homes of Michigan Logo"/>
-    <h3><a href="www.ehmsolutions.org/location/brecon-village/">Brecon Village</a></h3>
-    <p>Brecon Village is a Senior Living Community in Saline, offering services that allow seniors to live comfortably and enjoy the best years of their lives. Brecon Village offers Independent Living, Assisted Living, Memory Care and an adult day center. This facility is a newcomer to the Meet Me group, participating in tours since 2018.</p>
+    <div class="fac-cont">
+      <div class="facility">
+        <img src="images/ehm_Logo.png" alt="Evangelical Homes of Michigan Logo"/>
+        <div class="content">
+          <h3><a href="www.ehmsolutions.org/location/brecon-village/">Brecon Village</a></h3>
+          <p>Brecon Village is a Senior Living Community in Saline, offering services that allow seniors to live comfortably and enjoy the best years of their lives. Brecon Village offers Independent Living, Assisted Living, Memory Care and an adult day center. This facility is a newcomer to the Meet Me group, participating in tours since 2018.</p>
+        </div>
+      </div>
 
-    <img width="150" src="images/logo-glacier.png" alt="Glacier Hills Logo"/>
-    <h3><a href="www.glacierhills.org"> Glacier Hills </a></h3>
-    <p>Glacier Hills is a Senior Living Community in Ann Arbor offering independent living, assisted living, rehabilitation and memory care facilities. Meet Me at UMMA tours offer great opportunities for family members to come and spend some time with their loved ones. Glacier hills has been participating in Meet Me tours since 2012.</p>
+      <div class="facility">
+        <img src="images/logo-glacier.png" alt="Glacier Hills Logo"/>
+        <div class="content">
+          <h3><a href="www.glacierhills.org"> Glacier Hills </a></h3>
+          <p>Glacier Hills is a Senior Living Community in Ann Arbor offering independent living, assisted living, rehabilitation and memory care facilities. Meet Me at UMMA tours offer great opportunities for family members to come and spend some time with their loved ones. Glacier hills has been participating in Meet Me tours since 2012.</p>
+        </div>
+      </div>
 
-    <img width="150" src="images/UM-logo.png" alt="Michigan Medicine Logo"/>
-    <h3><a href="www.med.umich.edu/geriatrics/community/silverclub.htm">Silver Club</a></h3>
-    <p>The Silver Club Memory Program is an adult day center offered by the Turner Geriatric Resource Center. Since 1998, Silver Club Programs have been providing meaningful and engaging activities for individuals living with dementia. The Silver Club offers a safe, nurturing environment where guests can make friends, play cognitive games, create art, and participate in other activities. Programs are offered for various stages of dementia. Meet Me at UMMA has been working with the Silver Club and Elderberry groups since its inception.</p>
+      <div class="facility">
+        <img src="images/UM-logo.png" alt="Michigan Medicine Logo"/>
+        <div class="content">
+          <h3><a href="www.med.umich.edu/geriatrics/community/silverclub.htm">Silver Club</a></h3>
+          <p>The Silver Club Memory Program is an adult day center offered by the Turner Geriatric Resource Center. Since 1998, Silver Club Programs have been providing meaningful and engaging activities for individuals living with dementia. The Silver Club offers a safe, nurturing environment where guests can make friends, play cognitive games, create art, and participate in other activities. Programs are offered for various stages of dementia. Meet Me at UMMA has been working with the Silver Club and Elderberry groups since its inception.</p>
+        </div>
+      </div>
+    </div>
 
-    <h4>If your facility is interested in participating in a tour, please contact us (link to contact page)</h4>
+    <h4>If your facility is interested in participating in a tour, please <a href="/contact.html">contact us</a></h4>
 
 
 
