--- a/news.html
+++ b/news.html
@@ -29,37 +29,44 @@
 
     <main id="content">
 
-    <h1>Docent's Corner</h1>
+    <div id="docents">
+      <div id="blog">
+        <h1>Docent's Corner</h1>
 
-    <article>
-      <h2>Docents are being trained in the TimeSlips Method!</h2>
-      <h3>January 26, 2019</h3>
-      <img src="images/timeslips.png" alt="Time Slips Logo"/>
-      <p>TimeSlips is a creative storytelling method developed by Anne Bastings (www.timeslips.org). Meet Me docents attended a talk and workshop presented by Anne Bastings, creator of Timeslips, in January. Here, they learned methods to incorporate storytelling into their monthly tours. Check back for updates as the group begins to implement the TimeSlips program!</p>
-    </article>
-    <article>
-      <h2>Meet Me Celebrates a Fantastic Season!</h2>
-      <h3>December 10, 2018</h3>
-      <p>This season, the group hosted 15 tours with 90 guests*(Get actual numbers). The themes included Beyond Borders, Fabric, and Is it Art? Guests loved writing abstract poems inspired by Gilliam, sharing stories of their favorite objects and hearing the welcome diddies from Marlene and Susan. Thank you to all who made this Fall such a success!</p>
-    </article>
+        <article>
+          <img src="images/timeslips.png" alt="Time Slips Logo"/>
+          <h2>Docents are being trained in the TimeSlips Method!</h2>
+          <h3>January 26, 2019</h3>
+          <p>TimeSlips is a creative storytelling method developed by Anne Bastings (www.timeslips.org). Meet Me docents attended a talk and workshop presented by Anne Bastings, creator of Timeslips, in January. Here, they learned methods to incorporate storytelling into their monthly tours. Check back for updates as the group begins to implement the TimeSlips program!</p>
+        </article>
+        <article>
+          <h2>Meet Me Celebrates a Fantastic Season!</h2>
+          <h3>December 10, 2018</h3>
+          <p>This season, the group hosted 15 tours with 90 guests*(Get actual numbers). The themes included Beyond Borders, Fabric, and Is it Art? Guests loved writing abstract poems inspired by Gilliam, sharing stories of their favorite objects and hearing the welcome diddies from Marlene and Susan. Thank you to all who made this Fall such a success!</p>
+        </article>
+      </div>
 
-    <i class="far fa-comments fa-7x" aria-label="Speech Bubbles"></i>
-    <h1>Welcome Poems</h1>
-    <h2>Courtesy of Marlene & Susan</h2>
+      <div id="poems">
+        <h1>Welcome Poems</h1>
 
-    <article>
-      <h3>October 13</h3>
-      <p>Thank you all for joining us today</br> We hope you can find some time to play
-      </br>This is the start of a wonderful season</br> And we are glad you all found a reason </br>
-      To join us on this wonderful tour </p>
-    </article>
+        <i class="far fa-comments fa-6x" aria-label="Speech Bubbles"></i>
+        <h2>Courtesy of Marlene & Susan</h2>
 
-    <article>
-      <h3>September 23</h3>
-      <p>Thank you all for joining us today</br> We hope you can find some time to play
-      </br>This is the start of a wonderful season</br> And we are glad you all found a reason </br>
-      To join us on this wonderful tour </p>
-    </article>
+        <article>
+          <h3>October 13</h3>
+          <p>Thank you all for joining us today</br> We hope you can find some time to play
+          </br>This is the start of a wonderful season</br> And we are glad you all found a reason </br>
+          To join us on this wonderful tour </p>
+        </article>
+
+        <article>
+          <h3>September 23</h3>
+          <p>Thank you all for joining us today</br> We hope you can find some time to play
+          </br>This is the start of a wonderful season</br> And we are glad you all found a reason </br>
+          To join us on this wonderful tour </p>
+        </article>
+      </div>
+    </div>
   </main>
 
   <footer>
