--- a/contact.html
+++ b/contact.html
@@ -27,21 +27,23 @@
 
   <main id="content">
 
-    <img width="600" src="images/odonoghue.jpg" alt="Collage painting with gold, gray and beige colors"/>
-    <h1>Contact Meet Me at UMMA</h1>
-    <h2>Contact Form:</h2>
-    <form>
-      <!-- <label for="name">Name:</label> -->
-      <label for="name">Name:</label>
-      <input name="name" aria-label="Name:" type="text"><br>
-      <label for="email">Email:</label>
-      <input name="email" aria-label="Email:" type="text"><br>
-      <label for="phone">Phone:</label>
-      <input name="phone" aria-label="Phone:" type="text"><br>
-      <label for="message">Message:</label>
-      <input name="message" aria-label="Message:" type="text"><br>
-      <input type="submit" value="Submit">
-    </form>
+    <div id="contact">
+    <!-- <img width="600" src="images/odonoghue.jpg" alt="Collage painting with gold, gray and beige colors"/> -->
+      <div id="transparent">
+        <h1>Contact Meet Me at UMMA</h1>
+        <form name="contactform" method="POST" action="https://formspree.io/bribrode@umich.edu">
+          <label for="name">Name:</label>
+          <input id = "name" name="name" aria-label="Name:" type="text"><br>
+          <label for="email">Email:</label>
+          <input id = "email" name="email" aria-label="Email:" type="text"><br>
+          <label for="phone">Phone:</label>
+          <input id="phone" name="phone" aria-label="Phone:" type="text"><br>
+          <label for="message">Message:</label>
+          <input id="message" name="message" aria-label="Message:" type="text"><br>
+          <input id="submit" type="submit" value="Submit">
+        </form>
+      </div>
+    </div>
   </main>
       <br>
     <footer>
