--- a/tours.html
+++ b/tours.html
@@ -115,15 +115,15 @@
         <img width="200" src="images/gilliamgroup.jpeg" alt="Multicolored fabric pieces put together in a sculpture"/>
         <h2>October 12, 2018</h2>
         <p>swooping ripples
-        </br>gentle, soft pink
-        </br>    following waves
-        </br>some ugly little things
-        </br>a blanket for a giant
-        </br>a haphazard plan
-        </br>arranged, flung,
-        </br>    jabbed and folded
-        </br>things change regularly
-        </br>-- poem written by a tour group in response to Sam Gilliam's Situation VI--Pisces 4</p>
+        <br>gentle, soft pink
+        <br>    following waves
+        <br>some ugly little things
+        <br>a blanket for a giant
+        <br>a haphazard plan
+        <br>arranged, flung,
+        <br>    jabbed and folded
+        <br>things change regularly
+        <br>-- poem written by a tour group in response to Sam Gilliam's Situation VI--Pisces 4</p>
       </div>
     </div>
   </main>
