--- a/news.html
+++ b/news.html
@@ -54,15 +54,15 @@
 
         <article>
           <h3>October 13</h3>
-          <p>Thank you all for joining us today</br> We hope you can find some time to play
-          </br>This is the start of a wonderful season</br> And we are glad you all found a reason </br>
+          <p>Thank you all for joining us today<br> We hope you can find some time to play
+          <br>This is the start of a wonderful season<br> And we are glad you all found a reason <br>
           To join us on this wonderful tour </p>
         </article>
 
         <article>
           <h3>September 23</h3>
-          <p>Thank you all for joining us today</br> We hope you can find some time to play
-          </br>This is the start of a wonderful season</br> And we are glad you all found a reason </br>
+          <p>Thank you all for joining us today<br> We hope you can find some time to play
+          <br>This is the start of a wonderful season<br> And we are glad you all found a reason <br>
           To join us on this wonderful tour </p>
         </article>
       </div>
